--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <p>9:00 am</p>
             </div>
             <div class="col-3">
-                <input id="input9">
+                <input id="input9"  class="col-xs-3">
             </div>
             <div class="col-3">
                 <p id="9"></p>
@@ -49,7 +49,7 @@
                 <p>10:00 am</p>
             </div>
             <div class="col-3">
-                <input id="input10">
+                <input id="input10" class="col-xs-3">
             </div>
             <div class="col-3">
                 <p id="10"></p>
@@ -62,7 +62,7 @@
                 <p>10:00 am</p>
             </div>
             <div class="col-3">
-                <input id="input11">
+                <input id="input11"  class="col-xs-3">
             </div>
             <div class="col-3">
                 <p id="11"></p>
@@ -75,7 +75,7 @@
                 <p>12:00 pm</p>
             </div>
             <div class="col-3">
-                <input id="input12">
+                <input id="input12" class="col-xs-3">
             </div>
             <div class="col-3">
                 <p id="12"></p>
@@ -88,7 +88,7 @@
                 <p>1:00 pm</p>
             </div>
             <div class="col-3">
-                <input id="input13">
+                <input id="input13" class="col-xs-3">
             </div>
             <div class="col-3">
                 <p id="13"></p>
@@ -101,7 +101,7 @@
                 <p >2:00 pm</p>
             </div>
             <div class="col-3">
-                <input id="input14">
+                <input id="input14" class="col-xs-3">
             </div>
             <div class="col-3">
                 <p id="14"></p>
@@ -114,7 +114,7 @@
                 <p>3:00 pm</p>
             </div>
             <div class="col-3">
-                <input  id="input15">
+                <input  id="input15" class="col-xs-3">
             </div>
             <div class="col-3">
                 <p id="15"></p>
@@ -127,7 +127,7 @@
                 <p>4:00 pm</p>
             </div>
             <div class="col-3">
-                <input  id="input16">
+                <input  id="input16" class="col-xs-3">
             </div>
             <div class="col-3">
                 <p id="16"></p>
